test/SemanticAnalysis/Class/StaticMethodStaticRefInvalidTemplateArgCount.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// Handling of templated member access is currently broken.
// XFAIL: *

class TestClass() {
	template <typename A, typename B>
	static void method() { }
}

export void f() {
	// CHECK: .loci:14:2: error: incorrect number of template arguments provided for static method 'method'; 2 were required, but 0 were provided
	TestClass.method();
	
	// CHECK: .loci:17:2: error: incorrect number of template arguments provided for static method 'method'; 2 were required, but 1 were provided
	TestClass.method<int>();
	
	TestClass.method<int, int>();
	
	// CHECK: .loci:22:2: error: incorrect number of template arguments provided for static method 'method'; 2 were required, but 3 were provided
	TestClass.method<int, int, int>();
}

// CHECK: 3 errors generated.
